--- a/pure-popup.cabal
+++ b/pure-popup.cabal
@@ -1,26 +1,29 @@
 name:                pure-popup
-version:             0.7.0.0
--- synopsis:            
--- description:         
+version:             0.8.0.0
+homepage:            purehs.org/doc/pure-popup
 license:             BSD3
 license-file:        LICENSE
-author:              Sean Mackenzie
-maintainer:          sean@grump.ly
+author:              Sean Hickman
+maintainer:          sean@grumply.com
 category:            Web
 build-type:          Simple
 cabal-version:       >=1.10
 
+source-repository head
+  type: git
+  location: https://github.com/grumply/pure-popup.git
+
 library
   build-depends:
-    base >=4.9,
-    pure >= 0.7 && < 1,
-    pure-cond >= 0.7 && < 1,
-    pure-css >= 0.7 && < 1,
-    pure-prop >= 0.7 && < 1,
-    pure-styles >= 0.7 && < 1,
-    pure-txt >= 0.7 && < 1,
-    pure-theme >= 0.7 && < 1,
-    pure-portal >= 0.7 && < 1
+    base,
+    pure,
+    pure-cond,
+    pure-css,
+    pure-prop,
+    pure-styles,
+    pure-txt,
+    pure-theme,
+    pure-portal
   exposed-modules: 
     Pure.Popup
   hs-source-dirs:      src
